@@ -329,10 +329,10 @@ namespace LocARNA {
 		    if (options[i].flag!=0
 			&& options[i].argument==0)
 			{
-			    puts((bool)(*options[i].flag)?"ON":"OFF");
+			    fputs((bool)(*options[i].flag)?"ON":"OFF", stdout);
 			} else {
 			if (options[i].flag==0 || *options[i].flag) {
-			    puts("= ");
+			    fputs("= ", stdout);
 			    if (options[i].argument)
 				switch (options[i].arg_type) {
 				case O_ARG_STRING:
@@ -349,20 +349,20 @@ namespace LocARNA {
 				    printf("%f",*((double*)(options[i].argument)));
 				    break;
 				case O_ARG_BOOL:
-				    if (*((bool*)(options[i].argument))) puts("true");
-				    else puts("false");
+				    if (*((bool*)(options[i].argument))) fputs("true", stdout);
+				    else fputs("false", stdout);
 				    break;
 				default:
-				    puts("has unknown type");
+				    fputs("has unknown type", stdout);
 				}
 			    else {
-				puts("ON");
+				fputs("ON", stdout);
 			    }
 			} else {
-			    puts("-");
+			    fputs("-", stdout);
 			}
 		    }
-		    puts("\n");
+		    fputs("\n", stdout);
 		} // end if (!hide_options)
 	    } else { //NEW SECTION
 		hide_options = (options[i].arg_type == O_SECTION_HIDE);
@@ -394,14 +394,14 @@ namespace LocARNA {
 	    /* options and no options*/
 	    if (options[i].arg_type>O_SECTION) {
 		if (!hide_options) {
-		    puts(sprint_option_name_opt(options,i).c_str());
+		    fputs(sprint_option_name_opt(options,i).c_str(), stdout);
 		}
 	    } else {
 		hide_options = (options[i].arg_type == O_SECTION_HIDE);
-		if (!hide_options) puts(" ");
+		if (!hide_options) fputs(" ", stdout);
 	    }
 	}
-        puts("\n");
+        fputs("\n", stdout);
     }
 
     void
@@ -416,7 +416,7 @@ namespace LocARNA {
         printf("<!-- Galaxy wrapper for *%s* of the package *%s*\n-->",
                progname,PACKAGE_STRING);
         printf("<!-- Automatically generated by %s (option galaxy-xml)\n-->",progname);
-        puts("<!-- Please do NOT edit the generated wrapper.\n-->");
+        fputs("<!-- Please do NOT edit the generated wrapper.\n-->", stdout);
         printf("<!-- Source repository: %s\n-->\n\n",PACKAGE_VCS);
 
     	printf("<tool id=\"%s\" name=\"%s\" version=\"%s\">\n"
@@ -432,18 +432,18 @@ namespace LocARNA {
 
     	//======================================================================
     	// print commands
-    	puts("    <command><![CDATA[\n");
+    	fputs("    <command><![CDATA[\n", stdout);
     	printf("%s\n", progname);
-    	puts("        '$input1'\n"
+    	fputs("        '$input1'\n"
              "        '$input2'\n"
              "        --clustal '$clustal_output'\n"
-             );
+             , stdout);
         
     	for (i=0; i < num_opts; ++i) {
             /* options and no options*/
             if (options[i].arg_type==O_SECTION) {
                 if (is_if_open) {
-                    puts("        #end if\n");
+                    fputs("        #end if\n", stdout);
                     is_if_open = false;
                 }
                 if (options[i].description == "cmd_only" ||
@@ -476,26 +476,26 @@ namespace LocARNA {
 
                 printf("            --%s    $%s.%s", options[i].longname.c_str(),
                        category.c_str(), longname.c_str());
-                puts("\n");
+                fputs("\n", stdout);
             }
     	}
         if (is_if_open) {
-            puts("        #end if\n");
+            fputs("        #end if\n", stdout);
         }
-    	puts("]]></command>\n");
+    	fputs("]]></command>\n", stdout);
 
     	//======================================================================
     	// print parameters
     	ignore_category = false;
     	bool is_conditional_open = false;
 
-        puts("<inputs>\n");
+        fputs("<inputs>\n", stdout);
 
         // Find input files and write respective fields at the top
     	for (i=0; i < num_opts; ++i) {
             if (options[i].description.substr(0, 10) == "Input file") {
                 printf("    %s ",sprint_option_xml(options,i).c_str());
-                puts("\n");
+                fputs("\n", stdout);
             }
         }
         
@@ -505,7 +505,7 @@ namespace LocARNA {
             if (options[i].arg_type==O_SECTION ||
                 options[i].arg_type==O_SECTION_HIDE) {
                 if (is_conditional_open) {
-                    puts("    </section>\n");
+                    fputs("    </section>\n", stdout);
                     is_conditional_open = false;
                 }
                 // Hidden section, Input files and cmd_only not needed condition
@@ -534,31 +534,29 @@ namespace LocARNA {
             else if (options[i].arg_type>O_SECTION && !ignore_category &&
                      options[i].longname != "clustal") {
                 printf("        %s ",sprint_option_xml(options,i).c_str());
-                puts("\n");
+                fputs("\n", stdout);
             }
     	}
 
         if (is_conditional_open) {
-            puts("    </section>\n");
+            fputs("    </section>\n", stdout);
         }
-        puts("    </inputs>\n"
+        fputs("    </inputs>\n"
              "    <outputs>\n"
              "        <data format=\"clustal\" name=\"clustal_output\" label=\"CLUSTAL outfile \"/>\n"
-             "    </outputs>\n"
-             );
+             "    </outputs>\n", stdout);
 
         //======================================================================
     	// print tests
 
-        puts("    <tests>\n"
+        fputs("    <tests>\n"
              "    <!-- *******PUT TESTS HERE******** -->\n"
              "    </tests>\n"
-             "\n"
-             );
+             "\n", stdout);
 
         //======================================================================
         // print help
-       	puts("    <help><![CDATA[\n");
+       	fputs("    <help><![CDATA[\n", stdout);
        	printf("This tool is part of the package %s - %s.\n\n",
                PACKAGE_NAME,
                PACKAGE_SHORT_DESCRIPTION);
@@ -568,17 +566,61 @@ namespace LocARNA {
         printf("The software package is available for download at\n"
                ".. __: %s\n"
                ,PACKAGE_URL);
-       	puts("    ]]></help>\n\n");
+       	fputs("    ]]></help>\n\n", stdout);
 
-       	puts("    <citations>\n"
+       	fputs("    <citations>\n"
                "        <citation type=\"doi\">10.1371/journal.pcbi.0030065</citation>\n"
                "        <citation type=\"doi\">10.1093/bioinformatics/btv185</citation>\n"
                "        <citation type=\"doi\">10.1186/s12859-014-0404-0</citation>\n"
                "    </citations>\n"
-               "</tool>\n");
+               "</tool>\n", stdout);
 
     }
 
+    void
+    print_wrapped(std::string s,
+                  size_t offset,
+                  size_t width) {
+        size_t tolerance=10;
+
+        std::string t;
+        if (offset + s.length() > width) {
+            t=s.substr(0,width-offset);
+            s=s.substr(width-offset);
+            
+            bool goodsep=false;
+
+            if (s[0]!=' ') {
+                size_t pos = t.rfind(' ');
+                if (pos+1==t.length()){
+                    goodsep=true;
+                } else if (pos+tolerance>t.length()) {
+                    s=t.substr(pos+1)+s;
+                    t=t.substr(0,pos);
+                    goodsep=true;
+                }
+            } else {
+                s=s.substr(1);
+                goodsep=true;
+            }
+            
+            if (!goodsep) {
+                t=t+"\\";
+                s=""+s;
+            }
+        } else {
+            t=s;
+            s="";
+        }
+        fputs(t.c_str(),stdout);
+        
+        if (s.length() > 0) {
+            fputs("\n", stdout);
+            fputs(std::string(offset,' ').c_str(), stdout);
+            print_wrapped(s,offset,width);
+        }
+        return;
+    }
 
 
     /**
@@ -596,27 +638,31 @@ namespace LocARNA {
 
 	print_usage(progname, options); 
 
-	puts("Options:");
+	fputs("\nOptions:\n", stdout);
 
 	for (i=0; i<num_opts; i++) {
 	    if (options[i].arg_type>O_SECTION) {
 		if (!hide_options) {
-		    printf("    %-33s ",sprint_option_name(options,i).c_str());
-
-		    if (options[i].description!="")
-			printf("%s",options[i].description.c_str());
-
-		    puts("\n");
+                   size_t offset=5+3;
+                   size_t width=77;
+		    if (((size_t)printf("  %-5s ",sprint_option_name(options,i).c_str())) > offset) {
+                        fputs("\n",stdout);
+                        fputs(std::string(offset,' ').c_str(), stdout);
+                    }
+		    if (options[i].description!="") {
+                        print_wrapped(options[i].description,offset,width);
+                    }
+		    fputs("\n\n", stdout);
 		}
 	    } else { //NEW SECTION
 		hide_options = (options[i].arg_type == O_SECTION_HIDE);
 
 		if (!hide_options) {
-		    printf("%s:\n",options[i].description.c_str());
+                    printf("\n%s:\n",options[i].description.c_str());
 		}
 	    }
 	}
-	puts("");
+	fputs("\n", stdout);
     }
 
     /************************************************************/
